--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using BancoDataCoper
-@using BancoDataCoper.Models
-@using BancoDataCoper.Models.ViewModels
+﻿@using Databank
+@using Databank.Models
+@using Databank.Models.ViewModels
 @using System.Linq
 @using System.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
